Perkin-UAT/force-app/main/default/objects/QI_Case_Copy_Config__c/QI_Case_Copy_Config__c.object-meta.xml
<CustomObject>
    <label>QI Case Copy Config</label>
    <nameField>
        <label>QI Case Copy Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QI Case Copy Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>