Perkin-UAT/force-app/main/default/objects/QI_Case_Copy_Config__c/fields/Quality_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Quality_Case_Status__c</fullName>
    <label>Quality Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>