Perkin-UAT/force-app/main/default/objects/QI_Case_Copy_Config__c/fields/Quality_Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Quality_Case_Sub_Type__c</fullName>
    <label>Quality Case Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Quality_Case_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>