Perkin-UAT/force-app/main/default/objects/QI_Case_Copy_Config__c/fields/Quality_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Quality_Case_Type__c</fullName>
    <label>Quality Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mfg Procedures</fullName>
            </value>
            <value>
                <fullName>Bill of Material</fullName>
            </value>
            <value>
                <fullName>Camera</fullName>
            </value>
            <value>
                <fullName>Chip Quality</fullName>
            </value>
            <value>
                <fullName>Mfg Test</fullName>
            </value>
            <value>
                <fullName>Mfg Tooling</fullName>
            </value>
            <value>
                <fullName>Mis/Other</fullName>
            </value>
            <value>
                <fullName>Optics</fullName>
            </value>
            <value>
                <fullName>Out of Box Failure</fullName>
            </value>
            <value>
                <fullName>PC/Controller</fullName>
            </value>
            <value>
                <fullName>Plumbing – Pumps/Tubing</fullName>
            </value>
            <value>
                <fullName>Robot</fullName>
            </value>
            <value>
                <fullName>Wiring/Cabling</fullName>
            </value>
            <value>
                <fullName>Misc. Hardware</fullName>
            </value>
            <value>
                <fullName>PCB</fullName>
            </value>
            <value>
                <fullName>Product Specs</fullName>
            </value>
            <value>
                <fullName>Missing/Wrong Component</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Caliper Operating Process</fullName>
            </value>
            <value>
                <fullName>Product Enhancements</fullName>
            </value>
            <value>
                <fullName>Vendor/Supplier Issue</fullName>
            </value>
            <value>
                <fullName>Onsite Service/Support</fullName>
            </value>
            <value>
                <fullName>Packaging/Shipping</fullName>
            </value>
            <value>
                <fullName>Software/Firmware</fullName>
            </value>
            <value>
                <fullName>Product Safety</fullName>
            </value>
            <value>
                <fullName>Product User Documentation</fullName>
            </value>
            <value>
                <fullName>Training/Workmanship</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>