Perkin-UAT/force-app/main/default/objects/QI_Case_Copy_Config__c/fields/Resolution_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code_1__c</fullName>
    <label>Resolution Code 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% - No field replacements</fullName>
            </value>
            <value>
                <fullName>50% - Only Minor field replacements</fullName>
            </value>
            <value>
                <fullName>0% - Major field replacements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>