Perkin-UAT/force-app/main/default/objects/QI_Case_Copy_Config__c/fields/Resolution_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code_2__c</fullName>
    <label>Resolution Code 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% - No components missing</fullName>
            </value>
            <value>
                <fullName>50% - 1 or 2 components missing</fullName>
            </value>
            <value>
                <fullName>0% - 2+ components missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>