Perkin-UAT/force-app/main/default/objects/QI_Case_Copy_Config__c/fields/Resolution_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code_3__c</fullName>
    <label>Resolution Code 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% - Professional AND Protected</fullName>
            </value>
            <value>
                <fullName>50% - Professional OR Protected</fullName>
            </value>
            <value>
                <fullName>0% - Neither</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>