Perkin-UAT/force-app/main/default/objects/QI_Case_Copy_Config__c/fields/Service_Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Case_Sub_Type__c</fullName>
    <label>Service Case Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Courtesy Call</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Move</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Service Call</fullName>
            </value>
            <value>
                <fullName>System Validation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Internal - Sales Assist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>