Perkin-UAT/force-app/main/default/objects/QI_Case_Copy_Config__c/fields/Service_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Case_Type__c</fullName>
    <label>Service Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Chip and Reagent Replacement</fullName>
            </value>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Training Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>